@startuml SDA 1.1 UML Class Diagram
title SDA 1.1 UML Class Diagram
class AppCompatActivity {
    -mDelegate
    -mResources
    +AppCompatActivity()
    +onCreate()
    +setTheme()
    +getSupportActionBar()
    +setSupportActionBar()
    +getMenuInflater()
    +setContentView()
    +addContentView()
    +onConfigurationChanged()
    +findViewById()
    +onMenuItemSelected()
    +supportRequestWindowFeature()
    +supportInvalidateOptionsMenu()
    +onSupportActionModeStarted()
    +onSupportActionModeFinished()
    +onWindowStartingSupportActionMode()
    +startSupportActionMode()
    +setSupportProgressBarVisibility()
    +setSupportProgressBarIndeterminateVisibility()
    +setSupportProgressBarIndeterminate()
    +setSupportProgress()
    +onCreateSupportNavigateUpTaskStack()
    +onPrepareSupportNavigateUpTaskStack()
    +onSupportNavigateUp()
    +getSupportParentActivityIntent()
    +supportShouldUpRecreateTask()
    +supportNavigateUpTo()
    +onContentChanged()
    +onSupportContentChanged()
    +getDrawerToggleDelegate()
    +onMenuOpened()
    +onPanelClosed()
    +getDelegate()
    +dispatchKeyEvent()
    +getResources()
    +onKeyDown()
    +openOptionsMenu()
    +closeOptionsMenu()
    #attachBaseContext()
    #onPostCreate()
    #onPostResume()
    #onStart()
    #onStop()
    #onDestroy()
    #onTitleChanged()
    #onSaveInstanceState()
    #onNightModeChanged()
    -performMenuItemShortcut()
}
class AddItemActivity {
    -title : EditText
    -maker : EditText
    -description : EditText
    -length : EditText
    -width : EditText
    -height : EditText
    -photo : ImageView
    -image : Bitmap
    -REQUEST_CODE : Int
    -item_list : ItemList
    -context : Context
    +saveItem(View) : void
    +addPhoto(View) : void
    +deletePhoto(View) : void
    #onCreate(Bundle)
    #onActivityResult(Int, Int, Intent)
}
class EditItemActivity {
    -item_list : ItemList
    -item : Item
    -context : Context
    -image : BitMap
    -REQUEST_CODE : Int
    -photo : ImageView
    -title : EditText
    -maker : EditText
    -description : EditText
    -length : EditText
    -width : EditText
    -height : EditText
    -borrower : EditText
    -borrower_tv : TextView
    -status : Switch
    +addPhoto(View) : void
    +deletePhoto(View)
    +deleteItem(View)
    +toggleSwitch(View)
    #onCreate(Bundle)
    #onActivityResult(Int, Int, Intent)
}
class ItemList {
    -items : ArrayList<Item>
    -FILENAME : String
    +ItemList()
    +setItems() : void
    +getItems() : void
    +addItem() : void
    +deleteItem() : void
    +getItem(Int) : Item
    +getIndex(Item) : Int
    +getSize() : Int
    +loadItems(Context) : void
    +saveItems(Context) : void
    +filterItemsByStatus(String) : ArrayList<Item>
}
class Item {
    -title : String
    -maker : String
    -description : String
    -dimensions : Dimensions
    -status : String
    -borrower : String
    -id : String
    #image : Bitmap
    #image_base64  : String
    +Item(String, String, String, Dimensions, Bitmap, String)
    +getId() : String
    +setId() : void
    +updateId() : void
    +setTitle() : void
    +getTitle() : String
    +setMaker() : void
    +getMaker() : String
    +setDescription() : void
    +getDescription() : String
    +setDimensions() : void
    +getDimensions() : String
    +setStatus() : void
    +getStatus() : String
    +setBorrower() : void
    +getBorrower() : String
    +addImage() : void
    +getImage() : Bitmap
}
class Dimensions {
    -length : String
    -width : String
    -height : String
    +Dimensions() : String
    +getLength() : String
    +getWidth() : String
    +getHeight() : String
    +getDimensions() : String
    +setDimensions() : void
}
AppCompatActivity <|-- AddItemActivity
AppCompatActivity <|-- EditItemActivity
AddItemActivity ..> Item : <<create>>
AddItemActivity ..> Dimensions : <<create>>
AddItemActivity "1" *-- "1" ItemList
EditItemActivity ..> Dimensions : <<create>>
EditItemActivity "1" *-- "1" ItemList
EditItemActivity "1" o-- "1" Item
ItemList "0..*" o-- "0..*" Item
Item "1" *-- "1" Dimensions
@enduml